--- a/index.html
+++ b/index.html
@@ -4,9 +4,142 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<title>AppDesign</title>
 </head>
 <body>
+
+
+<header class="main-header">
+	<div class="container grid">
+		
+
+	 <div class="logo col"><img src="img/logo.svg" alt="AppDesign logo"></div>
+	 
+	 <nav class="main-nav col">
+	 	<ul class="unstyled-list">
+	 		<li><a href="#">Home</a></li>
+	 		<li><a href="#">About</a></li>
+	 		<li><a href="#">Blog</a></li>
+	 		<li><a href="#">Pricing</a></li>
+	 		<li><a href="#">Contact</a></li>
+	 	</ul>
+	 </nav>
+
+	</div>
+</header>
+
+<!-- Hero Area ============= -->
+
+
+
+<section class="hero">
+	<div class="container grid">
+
+		<div class="hero-text" col>
+			<h1 class="title-large"><span>Take your app to the </span>next level</h1>
+			<p class="text-intro">One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin.</p>
+			<a href="" class="btn btn--secondary">Learn More</a>
+			<a href="" class="btn btn--primary">Get the App</a>
+		</div>
+
+        <div class="col">
+        	<img src="img/phone.png" alt="" class="hero-img">
+        </div>
+
+	</div>
+</section>
+
+
+<!-- Sales Points ============= -->
+
+
+<section class="sales-points">
+	<div class="container grid">
+		<h1>Promote your app</h1>
+
+		<div class="sales-point col">
+			<img src="img/sales-responsive.png" alt="">
+			<h2></h2>
+			<p></p>
+		</div>
+		<div class="sales-point col">
+			<img src="img/sales-hand.png" alt="">
+			<h2></h2>
+			<p></p>
+		</div>
+		<div class="sales-point col">
+			<img src="img/sales-graph.png" alt="">
+			<h2></h2>
+			<p></p>
+		</div>
+
+	</div>
+</section>
+
+
+<!-- Amazing App Button ============= -->
+
+
+<section class="promo">
+	<div class="grid">
+	
+	 <div class="title-box">
+	 	<h1>This app is amazing</h1>
+	 	<p>It does everything you didn't know an app needed to do.</p>
+	 </div>
+
+     <div class="col">
+     	<h1>Doing great things for you</h1>
+     	<h2>Dellina cmosapp properties</h2>
+     	<p>One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin.</p>
+     	<p>One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin.</p>
+     	<a href="" class="btn btn--primary">Get the App</a>
+     </div>
+
+     <div class="col img-box">
+     	<img src="img/phone-in-hand.jpg" alt="holding hand phone">
+     </div>
+
+	</div>
+</section>
+
+
+<!-- CTA ============= -->
+
+
+<section class="cta">
+	<p class="text-large">You made it to the bottom and you still aren't sure?</p>
+	<h1 class="title-large">SHOWCASE THE GREATNESS TODAY</h1>
+	<a href="" class="btn btn--primary">Get the App</a>
+</section>
+
+<!-- FOOTER ============= -->
+
+
+
+<footer>
+	<div class="container">
+		<p>Take your app to the next level</p>
+		<ul class="unstyled-list social-links">
+			<li><a href=""><i class="fa fa-twitter-square" aria-hidden="true"></i>
+</a></li>
+			<li><a href=""><i class="fa fa-instagram" aria-hidden="true"></i>
+</a></li>
+			<li><a href=""><i class="fa fa-facebook-square" aria-hidden="true"></i>
+</a></li>
+			<li><a href=""><i class="fa fa-youtube-square" aria-hidden="true"></i>
+</a></li>
+		</ul>
+	</div>
+	 <ul class="unstyled-list nav-footer">
+	 	    <li><a href="#">Home</a></li>
+	 		<li><a href="#">About</a></li>
+	 		<li><a href="#">Blog</a></li>
+	 		<li><a href="#">Pricing</a></li>
+	 		<li><a href="#">Contact</a></li>
+	 </ul>
+</footer>
 
 </body>
 </html>
